@@ -85,7 +85,11 @@
               </label>
               <br>
             </div>
-            <label>Use software rendering (will reload the viewer)
+            <label>Enable linear interpolation
+              <input type="checkbox" style="margin-left: 20px" v-model="settingLinearInterpolation">
+            </label>
+            <br>
+            <label>Use software rendering (slower, will reload the viewer)
               <input type="checkbox" style="margin-left: 20px" v-model="settingSoftwareRendering">
             </label>
             <br><br>
